--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.3.0",
+    "styled-reset": "^4.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -32,6 +34,7 @@
     "@types/react-dom": "^17.0.8",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.11",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
     "dotenv-webpack": "^7.0.3",
