--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "start": "webpack serve",
     "build": "rm -rf ./dist && webpack",
     "sb": "start-storybook -p 6006",
-    "sb-build": "build-storybook"
+    "sb-build": "rm -rf ./storybook-static && build-storybook",
+    "clean": "rm -rf ./dist && rm -rf ./storybook-static"
   },
   "keywords": [],
   "author": "",
