--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "server": "cd server && npm run start",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "build": "cd client && npm run build",
-    "sync": "rm -rf ./dist && mkdir dist && mv ./client/dist ./",
+    "sync": "rm -rf ./dist && mv ./client/dist ./",
     "prod": "npm-run-all build sync",
     "proxy": "concurrently --kill-others-on-fail \"node proxy-server.js\" \"npm run server\"",
     "sb": "cd client && npm run sb",
-    "sb-build": "cd client && npm run sb-build"
+    "sb-build": "cd client && npm run sb-build",
+    "clean": "rm -rf ./dist && cd client && npm run clean"
   },
   "repository": {
     "type": "git",
