--- a/client/package.json
+++ b/client/package.json
@@ -45,11 +45,13 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
     "dotenv-webpack": "^7.0.3",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.0.0",
     "typescript": "^4.3.5",
+    "url-loader": "^4.1.1",
     "webpack": "^5.42.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
