--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "client": "cd client && npm run start",
-    "server": "cd server && npm run start",
-    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-    "build": "cd client && npm run build",
+    "client": "cd client && yarn start",
+    "server": "cd server && yarn start",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "build": "cd client && yarn build",
     "sync": "rm -rf ./dist && mv ./client/dist ./",
-    "prod": "npm-run-all build sync",
-    "proxy": "concurrently --kill-others-on-fail \"node proxy-server.js\" \"npm run server\"",
-    "sb": "cd client && npm run sb",
-    "sb-build": "cd client && npm run sb-build",
-    "clean": "rm -rf ./dist && cd client && npm run clean",
+    "prod": "yarn build && yarn sync",
+    "proxy": "concurrently --kill-others-on-fail \"node proxy-server.js\" \"yarn server\"",
+    "sb": "cd client && yarn sb",
+    "sb-build": "cd client && yarn sb-build",
+    "clean": "rm -rf ./dist && cd client && yarn clean",
     "initialize": "node ./initialize.js"
   },
   "repository": {
@@ -33,7 +33,6 @@
   },
   "devDependencies": {
     "concurrently": "^6.2.0",
-    "npm-run-all": "^4.1.5",
     "shelljs": "^0.8.4"
   }
 }
