--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "version": "1.1.7",
+  "version": "1.2.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,15 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.6.0",
     "axios": "^0.21.1",
-    "lru-cache": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
+    "react-query": "^3.23.2",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.1.0",
-    "redux-saga": "^1.1.3",
+    "recoil": "^0.4.1",
     "styled-components": "^5.3.0",
     "styled-reset": "^4.3.4"
   },
@@ -36,10 +33,8 @@
     "@storybook/addon-essentials": "^6.3.2",
     "@storybook/addon-links": "^6.3.2",
     "@storybook/react": "^6.3.2",
-    "@types/lru-cache": "^5.1.0",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
-    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.11",
     "babel-loader": "^8.2.2",
